--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <a class="logo" href=""> <span class="accent-logo">Web</span>Studio</a>
 
         <ul class="site-nav">
-          <li><a class="link" href="">Студия</a></li>
+          <li><a class="link" href="./index.html">Студия</a></li>
           <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="adres-nav">
-        <li><a class="link" href="">info@devstudio.com</a></li>
-        <li><a class="link" href="">+38 096 111 11 11</a></li>
+        <li><a class="adres-link" href="">info@devstudio.com</a></li>
+        <li><a class="adres-link" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
