--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="adres-nav">
-        <li><a class="adres-link" href="">info@devstudio.com</a></li>
-        <li><a class="adres-link" href="">+38 096 111 11 11</a></li>
+      <ul class="adres">
+        <li><a class="adres link" href="">info@devstudio.com</a></li>
+        <li><a class="adres link" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -151,15 +151,17 @@
         <address>
           <ul class="address">
             <li>
-              <a class="address" href="">г. Киев, пр-т Леси Украинки, 26</a>
+              <a class="address-map link" href=""
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
             </li>
 
             <li>
-              <a class="address" href="">info@devstudio.com</a>
+              <a class="address link" href="">info@devstudio.com</a>
             </li>
 
             <li>
-              <a class="address" href="">+38 096 111 11 11</a>
+              <a class="address link" href="">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
