--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="adres-nav">
-        <li><a class="adres-link" href="">info@devstudio.com</a></li>
-        <li><a class="adres-link" href="">+38 096 111 11 11</a></li>
+      <ul class="adres">
+        <li><a class="adres" href="">info@devstudio.com</a></li>
+        <li><a class="adres" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -40,11 +40,9 @@
           <li><button class="button-tap" type="button">Дизайн</button></li>
           <li><button class="button-tap" type="button">Маркетинг</button></li>
         </ul>
-      </section>
 
-      <!--меню зображень -->
+        <!--меню зображень -->
 
-      <section>
         <ul>
           <li>
             <img src="./images/8.jpg" alt="компютер" width="370" />
@@ -101,15 +99,17 @@
         <address>
           <ul class="address">
             <li>
-              <a class="address" href="">г. Киев, пр-т Леси Украинки, 26</a>
+              <a class="address-map link" href=""
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
             </li>
 
             <li>
-              <a class="address" href="">info@devstudio.com</a>
+              <a class="address link" href="">info@devstudio.com</a>
             </li>
 
             <li>
-              <a class="address" href="">+38 096 111 11 11</a>
+              <a class="address link" href="">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
