--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
         </ul>
       </nav>
       <ul class="adres">
-        <li><a class="adres" href="">info@devstudio.com</a></li>
-        <li><a class="adres" href="">+38 096 111 11 11</a></li>
+        <li><a class="adres link" href="">info@devstudio.com</a></li>
+        <li><a class="adres link" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
