--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -27,7 +31,7 @@
       </nav>
       <ul class="adres">
         <li><a class="adres link" href="">info@devstudio.com</a></li>
-        <li><a class="adres link" href="">+38 096 111 11 11</a></li>
+        <li><a class="adres link'" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
