--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       </nav>
       <ul class="adres">
         <li><a class="adres link" href="">info@devstudio.com</a></li>
-        <li><a class="adres link" href="">+38 096 111 11 11</a></li>
+        <li><a class="adres link'" href="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
